--- a/editor/src/org/netbeans/modules/editor/options/ScrollInsetsCustomEditor.form
+++ b/editor/src/org/netbeans/modules/editor/options/ScrollInsetsCustomEditor.form
@@ -6,9 +6,9 @@
       <Connection code="new javax.swing.border.EmptyBorder( new java.awt.Insets( 12, 12, 11, 11) ) " type="code"/>
     </Property>
   </Properties>
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout"/>
   <SubComponents>
@@ -18,11 +18,11 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="topLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="bundle.getString(&quot;SICE_Top&quot;)" type="code"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="topField" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="getBundleString(&quot;SICE_Top&quot;)" type="code"/>
             </Property>
           </Properties>
           <Constraints>
@@ -32,7 +32,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="topField">
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateInsets"/>
           </Events>
@@ -44,11 +43,11 @@
         </Component>
         <Component class="javax.swing.JLabel" name="leftLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="bundle.getString(&quot;SICE_Left&quot;)" type="code"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="leftField" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="getBundleString(&quot;SICE_Left&quot;)" type="code"/>
             </Property>
           </Properties>
           <Constraints>
@@ -58,7 +57,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="leftField">
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateInsets"/>
           </Events>
@@ -70,11 +68,11 @@
         </Component>
         <Component class="javax.swing.JLabel" name="bottomLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="bundle.getString(&quot;SICE_Bottom&quot;)" type="code"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="bottomField" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="getBundleString(&quot;SICE_Bottom&quot;)" type="code"/>
             </Property>
           </Properties>
           <Constraints>
@@ -84,7 +82,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="bottomField">
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateInsets"/>
           </Events>
@@ -96,11 +93,11 @@
         </Component>
         <Component class="javax.swing.JLabel" name="rightLabel">
           <Properties>
-            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="bundle.getString(&quot;SICE_Right&quot;)" type="code"/>
-            </Property>
             <Property name="labelFor" type="java.awt.Component" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
               <Connection component="rightField" type="bean"/>
+            </Property>
+            <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="getBundleString(&quot;SICE_Right&quot;)" type="code"/>
             </Property>
           </Properties>
           <Constraints>
@@ -110,7 +107,6 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JTextField" name="rightField">
-
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateInsets"/>
           </Events>
