--- a/editor/src/org/netbeans/modules/editor/options/AbbrevsEditorPanel.form
+++ b/editor/src/org/netbeans/modules/editor/options/AbbrevsEditorPanel.form
@@ -8,9 +8,9 @@
       </Border>
     </Property>
   </Properties>
-  <SyntheticProperties>
-    <SyntheticProperty name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
-  </SyntheticProperties>
+  <AuxValues>
+    <AuxValue name="designerSize" type="java.awt.Dimension" value="-84,-19,0,5,115,114,0,18,106,97,118,97,46,97,119,116,46,68,105,109,101,110,115,105,111,110,65,-114,-39,-41,-84,95,68,20,2,0,2,73,0,6,104,101,105,103,104,116,73,0,5,119,105,100,116,104,120,112,0,0,1,44,0,0,1,-112"/>
+  </AuxValues>
 
   <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridBagLayout"/>
   <SubComponents>
@@ -36,7 +36,6 @@
             <Property name="showVerticalLines" type="boolean" value="false"/>
             <Property name="showHorizontalLines" type="boolean" value="false"/>
           </Properties>
-
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="abbrevsTable.setSelectionMode( DefaultListSelectionModel.SINGLE_SELECTION );&#xa;// Set the width of columns to 30% and 70%&#xa;TableColumnModel col = abbrevsTable.getColumnModel();&#xa;col.getColumn( 0 ).setMaxWidth( 3000 );    &#xa;col.getColumn( 0 ).setPreferredWidth( 30 );&#xa;col.getColumn( 1 ).setMaxWidth( 7000 );    &#xa;col.getColumn( 1 ).setPreferredWidth( 70 );"/>
           </AuxValues>
@@ -46,13 +45,12 @@
     <Component class="javax.swing.JButton" name="addButton">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString(&quot;AEP_Add_Mnemonic&quot;).charAt (0)" type="code"/>
+          <Connection code="getBundleString(&quot;AEP_Add_Mnemonic&quot;).charAt (0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString( &quot;AEP_Add&quot; )" type="code"/>
+          <Connection code="getBundleString( &quot;AEP_Add&quot; )" type="code"/>
         </Property>
       </Properties>
-
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="addButtonActionPerformed"/>
       </Events>
@@ -65,13 +63,12 @@
     <Component class="javax.swing.JButton" name="editButton">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString(&quot;AEP_Edit_Mnemonic&quot;).charAt (0)" type="code"/>
+          <Connection code="getBundleString(&quot;AEP_Edit_Mnemonic&quot;).charAt (0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString( &quot;AEP_Edit&quot; )" type="code"/>
+          <Connection code="getBundleString( &quot;AEP_Edit&quot; )" type="code"/>
         </Property>
       </Properties>
-
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="editButtonActionPerformed"/>
       </Events>
@@ -84,13 +81,12 @@
     <Component class="javax.swing.JButton" name="removeButton">
       <Properties>
         <Property name="mnemonic" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString(&quot;AEP_Remove_Mnemonic&quot;).charAt (0)" type="code"/>
+          <Connection code="getBundleString(&quot;AEP_Remove_Mnemonic&quot;).charAt (0)" type="code"/>
         </Property>
         <Property name="text" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-          <Connection code="bundle.getString( &quot;AEP_Remove&quot; )" type="code"/>
+          <Connection code="getBundleString( &quot;AEP_Remove&quot; )" type="code"/>
         </Property>
       </Properties>
-
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="removeButtonActionPerformed"/>
       </Events>
