--- a/editor/test/qa-functional/src/org/netbeans/test/editor/app/gui/TestEditorFrame.form
+++ b/editor/test/qa-functional/src/org/netbeans/test/editor/app/gui/TestEditorFrame.form
@@ -70,7 +70,7 @@
             </MenuItem>
             <MenuItem class="javax.swing.JMenuItem" name="jMenuItem7">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Test Threads"/>
+                <Property name="text" type="java.lang.String" value="Actions"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="testThreads"/>
