--- a/mobility.svgcore/src/org/netbeans/modules/mobility/svgcore/items/form/radio_button.xml
+++ b/mobility.svgcore/src/org/netbeans/modules/mobility/svgcore/items/form/radio_button.xml
@@ -4,7 +4,7 @@
 
  <editor_palette_item version="1.0">
      <body>
-         <![CDATA[ <g transform="translate(20,190)">
+         <![CDATA[ <g transform="translate(%%COORDINATE_X%%,%%COORDINATE_Y%%)">
         <rect x="0" y="0" rx="5" ry="5" width="200" height="60" fill="none" stroke="#85a6cf" stroke-width="2"/>
         <g id="radio_male" transform="translate(7,5)">
 	    <!-- Metadata information. Please don't edit. -->
