--- a/mobility.svgcore/src/org/netbeans/modules/mobility/svgcore/items/form/slider.xml
+++ b/mobility.svgcore/src/org/netbeans/modules/mobility/svgcore/items/form/slider.xml
@@ -4,7 +4,7 @@
 
  <editor_palette_item version="1.0">
      <body>
-         <![CDATA[ <g id="size_slider" transform="translate(20,110)">
+         <![CDATA[ <g id="size_slider" transform="translate(%%COORDINATE_X%%,%%COORDINATE_Y%%)">
 	    <!-- Metadata information. Please don't edit. -->
 	    <text display="none">type=slider</text>
 
