--- a/web.client.tools.impl/src/org/netbeans/modules/web/client/javascript/debugger/ui/options/NbJSAdvancedOptionsPanel.form
+++ b/web.client.tools.impl/src/org/netbeans/modules/web/client/javascript/debugger/ui/options/NbJSAdvancedOptionsPanel.form
@@ -4,6 +4,7 @@
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="1"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
+    <AuxValue name="FormSettings_generateFQN" type="java.lang.Boolean" value="true"/>
     <AuxValue name="FormSettings_generateMnemonicsCode" type="java.lang.Boolean" value="false"/>
     <AuxValue name="FormSettings_i18nAutoMode" type="java.lang.Boolean" value="true"/>
     <AuxValue name="FormSettings_layoutCodeTarget" type="java.lang.Integer" value="2"/>
@@ -18,24 +19,17 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <Component id="showFunctionsCheckBox" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
-                      <Component id="suspendOnFirstLineCheckBox" min="-2" max="-2" attributes="0"/>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="showConstantsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="bypassConstructorsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="enableStepFiltersCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="suspendOnDebuggerKeywordCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="suspendOnErrorsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="suspendOnExceptionsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
+                  <Component id="showConstantsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="bypassConstructorsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="enableStepFiltersCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="showFunctionsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="suspendOnFirstLineCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="suspendOnDebuggerKeywordCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="suspendOnErrorsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="suspendOnExceptionsCheckBox" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="53" max="32767" attributes="0"/>
           </Group>
